--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "alizone-iklimlendirme",
-  "version": "1.0.0",
+  "name": "climate",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,12 +12,11 @@
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "swiper": "11.1.8"
+    "swiper": "^11.1.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
-
